tests/tooling/fixtures/native/recovery/negative/negative_misplaced_qualifier_after_return_extern_fn_pure.objc3
// Negative fixture: declaration qualifiers are not allowed after function return annotations.
// Expected diagnostic code(s): O3P100.
module NegativeMisplacedQualifierAfterReturnExternFnPure;

extern fn add(lhs: i32, rhs: i32) -> i32 pure;

fn main() -> i32 {
  return 0;
}
